--- a/src/pages/AddArticle/AddArticle.scss
+++ b/src/pages/AddArticle/AddArticle.scss
@@ -43,6 +43,7 @@
 	left: 0;
 	width: 100%;
 	height: 200px;
+	object-fit: cover;
 }
 
 .deleteCover {
@@ -80,7 +81,7 @@
 	align-items: center;
 	width: fit-content;
 
-	padding: 5px 10px;
+	padding: 10px 10px;
 	gap: 7px;
 	border-radius: 100px;
 	background-color: rgba(46, 46, 46, 0.05);
@@ -161,7 +162,6 @@
 
 	font-size: 18px;
 	font-weight: 400;
-	padding-bottom: 10px;
 
 	&::placeholder {
 		opacity: 0.3;
