--- a/src/pages/ArticleContainter/ArticleContainer.scss
+++ b/src/pages/ArticleContainter/ArticleContainer.scss
@@ -23,8 +23,8 @@
 		}
 
 		@media (max-width: 800px) {
+			transform: translateY(35px);
 			min-width: 80%;
-			// margin-top: 146px;
 		}
 
 		@media (max-width: 455px) {
@@ -142,4 +142,5 @@
 	left: 0;
 	width: 100%;
 	height: 200px;
+	object-fit: cover;
 }
